[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elatorch"
version = "0.0.1"
dependencies = [
  "torch>=2.0.0",
]
requires-python = ">=3.10"
authors = [
  {name = "ttpr0", email = "ttpro@gmx.de"},
]
description = "Pytorch implementation of ELA (Exploratory Landscape Analysis) features"
readme = "README.md"
